Fix : Make background darker for better readability

--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,10 @@ p{
   line-height: 1.5;
   font-size: 1.5em;
 
+
   color-scheme: light dark;
   color:#fff3af;
-  background: linear-gradient(#0f2030, #48b8e830);
+  background: linear-gradient(#0f2030, #3281a230);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
